--- a/components/NavBar/Styles.css
+++ b/components/NavBar/Styles.css
@@ -1,7 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 * {
     margin: 0;
     padding: 0;
@@ -34,6 +30,11 @@ header {
     margin-right: 20px;
 }
 
+.menus {
+    display: flex;
+    list-style: none;
+}
+
 .menu-items {
     position: relative;
     font-size: 14px;
@@ -63,7 +64,7 @@ header {
 
 .menu-items a:hover,
 .menu-items button:hover {
-    /*background-color: #f2f2f2;*/
+    background-color: #f2f2f2;
 }
 
 .arrow::after {
@@ -87,7 +88,7 @@ header {
     min-width: 10rem;
     padding: 0.5rem 0;
     list-style: none;
-    /*background-color: #fff;*/
+    background-color: #fff;
     border-radius: 0.5rem;
     display: none;
 }
