--- a/styles/globals.css
+++ b/styles/globals.css
@@ -84,7 +84,7 @@ header {
     0 4px 6px -2px rgba(71, 63, 79, 0.16);
     font-size: 0.875rem;
     z-index: 9999;
-    min-width: 10rem;
+    min-width: 20rem;
     padding: 0.5rem 0;
     list-style: none;
     /*background-color: #fff;*/
@@ -96,8 +96,15 @@ header {
     display: block;
 }
 
-.dropdown .dropdown-submenu {
+.dropdown .dropdown-submenu-right {
     position: absolute;
     left: 100%;
     top: -7px;
 }
+
+.dropdown .dropdown-submenu-left {
+    position: absolute;
+    right: 100%;
+    top: -7px;
+}
+
