--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,7 +36,7 @@ header {
 
 .menu-items {
     position: relative;
-    font-size: 14px;
+    font-size: 1rem;
 }
 
 .menu-items a {
@@ -84,7 +84,7 @@ header {
     0 4px 6px -2px rgba(71, 63, 79, 0.16);
     font-size: 0.875rem;
     z-index: 9999;
-    min-width: 20rem;
+    min-width: 12rem;
     padding: 0.5rem 0;
     list-style: none;
     /*background-color: #fff;*/
