--- a/styles/globals.css
+++ b/styles/globals.css
@@ -108,3 +108,12 @@ header {
     top: -7px;
 }
 
+.hide-scroll::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.hide-scroll {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
