--- a/styles/globals.css
+++ b/styles/globals.css
@@ -117,3 +117,19 @@ header {
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
 }
+
+
+/*Next Image CSS*/
+.custom-img {
+    object-fit: contain;
+    width: 100% !important;
+    position: relative !important;
+    height: unset !important;
+}
+
+.unset-img {
+    width: 100%;
+}
+.unset-img > div {
+    position: unset !important;
+}
