--- a/styles/globals.css
+++ b/styles/globals.css
@@ -169,10 +169,12 @@ header {
         /* flex-wrap: nowrap;
         overflow-x: scroll; */
     }
+
     .fbox {
         min-width: 100%;
         margin: 0;
     }
+
     .section-a {
         transform: rotate(0deg);
         margin-bottom: -50px;
@@ -180,7 +182,7 @@ header {
         margin-right: 0;
         display: none;
     }
-
+}
 /*Next Image CSS*/
 .custom-img {
     object-fit: contain;
