--- a/styles/globals.css
+++ b/styles/globals.css
@@ -121,7 +121,7 @@ header {
 /* Feature Card css (homepage) */
 .fbox-container {
     display: flex;
-    height: fit-content;
+    min-height: 400px;
 }
 .fbox {
     overflow: hidden;
@@ -151,10 +151,10 @@ header {
     transform: rotateY(180deg);
 }
 .fbox-even .section-a, .fbox-even .section-b {
-    background-color: #2D5F9E;
+    background-color: rgb(0, 0, 61);
 }
 .fbox-odd .section-a, .fbox-odd .section-b {
-    background-color: #640100;
+    background-color: rgb(158, 0, 0);
 }
 /* .fbox:nth-of-type(even) .section-a, .fbox:nth-of-type(even) .section-b {
     background-color: rgb(0, 0, 88);
@@ -182,5 +182,4 @@ header {
         margin-right: 0;
         display: none;
     }
->>>>>>>>> Temporary merge branch 2
 }
